# SVGnest

./: .gitignore  README.md  index.html  main.py  package.json  pyproject.toml  svgnest.js  svgparser.js
src/: cli.py  geometry.py  matrix.py  minishapely.py  nest.py  paths.py  placer.py  svg.py
tests/: test_packer.py
util/: path-utils.js  placementworker.js
