[tool.poetry]
name = "svg-nest"
version = "0.1.0"
description = "Python SVG nesting CLI"
authors = ["Your Name <your.email@example.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
fire = "^0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
