[tool.poetry]
name = "svg-nest"
version = "0.1.0"
description = "Python SVG nesting CLI"
authors = ["Your Name <your.email@example.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fire = "^0.5"
shapely = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
